// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> should render correctly with custom props 1`] = `
<input
  class="StyledInput-ok3pz6-0 gZTOyO"
/>
`;

exports[`<Input /> should render correctly with default props 1`] = `
<input
  class="StyledInput-ok3pz6-0 isomuM"
/>
`;
